# JoshuaVulkanEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Lib/guid/: guid.cpp  guid.hpp
Resources/Shader/GLSL/: debug.quad.shadow.frag  debug.quad.vert  defershading.frag  defershading.vert  ibl.filtercube.vert  ibl.irradiance.frag  ibl.prefilterEnvMap.frag  linkedlist-color.frag  linkedlist-color.vert  linkedlist-geometry.frag  linkedlist-geometry.vert  mrt.frag  mrt.vert  pbr.frag  pbr.vert  shader.frag  shader.vert  shadowmap.scene.frag  shadowmap.scene.vert  shadowmap.vert  skybox.frag  skybox.vert  z-prepass.vert
Resources/Shader/GLSL/SPIR-V/: shader.frag.spv  shader.vert.spv
Src/: main.cpp
Src/CppDemo/01_context/: context.cpp  context.h
Src/CppDemo/02_swapchain/: swapchain.cpp  swapchain.h
Src/CppDemo/03_shader/: shader.cpp  shader.h
Src/CppDemo/04_renderprocess/: renderprocess.cpp  renderprocess.h
Src/CppDemo/05_render/: renderer.cpp  renderer.h
Src/Demo/01_createwindow/: createwindow.cpp  createwindow.h
Src/Demo/02_createVulkanInstance/: createVulkanInstance.cpp  createVulkanInstance.h
Src/Demo/03_physicalDeviceAndQueue/: physicalDeviceAndQueue.cpp  physicalDeviceAndQueue.h
Src/Editor/: Editor.cpp  Editor.h
Src/Editor/Render/: EditorRenderer.cpp  EditorRenderer.h
Src/Editor/Window/: EditorWindow.cpp  EditorWindow.h
Src/Runtime/Base/: Guid.cpp  Guid.h
Src/Runtime/Platform/: PlatformInputMonitor.h  PlatformWindow.cpp  PlatformWindow.h
Src/Runtime/Platform/Windows/: WindowsInputMonitor.cpp  WindowsInputMonitor.h  WindowsWindow.cpp  WindowsWindow.h
Src/Runtime/Render/: Camera.cpp  Camera.h  Light.cpp  Light.h  Renderer.cpp  Renderer.h  RendererBase.cpp  RendererBase.h
Src/Runtime/Render/Deferred/: DeferredRenderer.cpp  DeferredRenderer.h
Src/Runtime/Render/MultiPipelines/: MultiPipelineRenderer.cpp  MultiPipelineRenderer.h
Src/Runtime/Render/OIT/: OITRenderer.cpp  OITRenderer.h
Src/Runtime/Render/OIT/LinkedList/: LinkedListColorPass.cpp  LinkedListColorPass.h  LinkedListGeometryPass.cpp  LinkedListGeometryPass.h
Src/Runtime/Render/PBR/: PBRRenderer.cpp  PBRRenderer.h
Src/Runtime/Render/PostPass/: PostPass.cpp  PostPass.h  PresentPostPass.cpp  PresentPostPass.h
Src/Runtime/Render/PrePass/: GeometryPrePass.cpp  GeometryPrePass.h  PrePass.cpp  PrePass.h  ZPrePass.cpp  ZPrePass.h
Src/Runtime/Render/Prefilter/: Ibl.cpp  Ibl.h
Src/Runtime/Render/ShadowMap/: ShadowMapRenderer.cpp  ShadowMapRenderer.h
Src/Runtime/Render/SimpleModel/: SimpleModelRenderer.cpp  SimpleModelRenderer.h
Src/Runtime/RenderGraph/: RenderDependencyGraph.h  RenderGraph.cpp  RenderGraph.h  RenderGraphBuilder.cpp  RenderGraphBuilder.h  RenderGraphRegistry.cpp  RenderGraphRegistry.h
Src/Runtime/RenderGraph/Model/: ModelWrapper.cpp  ModelWrapper.h
Src/Runtime/RenderGraph/Pass/: RenderGraphPassExecutor.h  RenderGraphPassNode.h
Src/Runtime/RenderGraph/Resource/: RenderGraphHandle.cpp  RenderGraphHandle.h  RenderGraphResource.h  RenderGraphResourceNode.h  RenderGraphVirtualResource.h
Src/Runtime/RenderGraphBlackboard/: SimpleModelRenderGraphBlackboard.cpp  SimpleModelRenderGraphBlackboard.h
Src/Runtime/VulkanRHI/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanDescriptorSets.cpp  VulkanDescriptorSets.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDynamicState.cpp  VulkanDynamicState.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPipelineCache.cpp  VulkanPipelineCache.h  VulkanPipelineLayout.cpp  VulkanPipelineLayout.h  VulkanRHI.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderPipeline.cpp  VulkanRenderPipeline.h  VulkanShaderSet.cpp  VulkanShaderSet.h  VulkanSwapchain.cpp  VulkanSwapchain.h
Src/Runtime/VulkanRHI/Graphic/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelPresets.cpp  ModelPresets.h  Vertex.cpp  Vertex.h
Src/Runtime/VulkanRHI/Layout/: UniformBufferObject.cpp  UniformBufferObject.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanPipelineLayout.cpp  VulkanPipelineLayout.h
Src/Runtime/VulkanRHI/PipelineStates/: VulkanColorBlendState.cpp  VulkanColorBlendState.h  VulkanDepthStencilState.cpp  VulkanDepthStencilState.h  VulkanDynamicState.cpp  VulkanDynamicState.h  VulkanInputAssemblyState.cpp  VulkanInputAssemblyState.h  VulkanMultisampleState.cpp  VulkanMultisampleState.h  VulkanRasterizationState.cpp  VulkanRasterizationState.h  VulkanVertextInputState.cpp  VulkanVertextInputState.h  VulkanViewportState.cpp  VulkanViewportState.h
Src/Runtime/VulkanRHI/RenderPass/: ShadowMapRenderPass.cpp  ShadowMapRenderPass.h
Src/Runtime/VulkanRHI/Resources/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanDepthBuffer.cpp  VulkanDepthBuffer.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImage.cpp  VulkanImage.h
Src/Util/: Mathutil.cpp  Mathutil.h  Modelutil.cpp  Modelutil.h  fileutil.cpp  fileutil.h  textureutil.cpp  textureutil.h
